# simmit

./: Dockerfile  Install.sh  README.md
Examples/Clean_data/: clean_interpolate.ipynb
Examples/Continuum_Mechanics/: constitutive_props.ipynb  constitutive_relations.ipynb  constitutive_tools.ipynb  contimech.ipynb
Examples/Identification/: id_params.txt  identification.ipynb  identification_scipy-Copy1.ipynb  identification_scipy.ipynb  path_id_1.txt  path_id_3.txt
Examples/Identification/data/: files_exp.inp  files_num.inp  gen0.inp  ident_control.inp  parameters.inp  path_id_2.txt
Examples/MMSP/exp_validation/: comp_exp.ipynb
Examples/MMSP/micromechanics_examples/: micro_examples1.ipynb  micro_examples_blank.ipynb
Examples/MMSP/parametric_analysis/: E-concentration_MT.txt  E-concentration_SC.txt  E_L-angle_MT.txt  E_L-angle_SC.txt  fibre_angle.ipynb
Examples/Material selection/: material_selection.ipynb
Examples/Material selection/database_materials/: Al.txt  Al2O3.txt  CFRP.txt  GFRP.txt  HighC.txt  LowC.txt  PE.txt  PP.txt  PS.txt  SiC.txt  Ti.txt  Zn.txt  bulk.txt  ceramics.txt  concrete.txt  elastomers.txt  epoxy.txt  exp.txt  metals.txt  nat_rubber.txt  phenolics.txt  polyester.txt  polyurethane.txt  porous.txt  silicone.txt  thermoplastics.txt  thermosets.txt
Examples/ODF/: ODF.ipynb
Examples/ODF/.ipynb_checkpoints/: ODF-checkpoint.ipynb  ODF_iden-checkpoint.ipynb  identification-checkpoint.ipynb
Examples/ODF/discretization/: ODF.ipynb
Examples/ODF/identification/: ODF_iden.ipynb  id_params.txt
Examples/Umats/Damage/: LLDM.ipynb  co_pm45.txt  composite_pm45_inc.txt  material.txt  path.txt  t300
Examples/Umats/Elasticity/: ELISO.ipynb  ELITR.ipynb  ELORT.ipynb  path.txt  path_1.txt  path_2.txt
Examples/Umats/Plasticity/: EPICP.ipynb  EPKCP.ipynb
Examples/Validation/: fibre_angle.ipynb  sphere_concentration.ipynb
Examples/Visualization/: ellipsoid.ipynb
python-setup/: setup.py
python-setup/simmit/: ashby.py
smartplus-builder/: CMakeLists.txt
smartplus-builder/cmake/: Findsmartplus.cmake
smartplus-builder/include/simmit/arma2numpy/: list_vector.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Abaqus/: write.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Continuum_Mechanics/: Leff.hpp  constitutive.hpp  contimech.hpp  criteria.hpp  damage.hpp  kinematics.hpp  recovery_props.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Homogenization/: eshelby.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Identification/: constants.hpp  identification.hpp  optimize.hpp  parameters.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Material/: ODF.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Maths/: lagrange.hpp  rotation.hpp
smartplus-builder/include/simmit/smartplus_wrappers/Libraries/Solver/: read.hpp  solver.hpp
smartplus-builder/src/arma2numpy/: list_vector.cpp
smartplus-builder/src/smartplus_wrappers/: boostpython_smartplus_wrappers.cpp  identification_wrappers.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Abaqus/: write.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Continuum_Mechanics/: Leff.cpp  constitutive.cpp  contimech.cpp  criteria.cpp  damage.cpp  kinematics.cpp  recovery_props.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Homogenization/: eshelby.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Identification/: constants.cpp  identification.cpp  optimize.cpp  parameters.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Material/: ODF.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Maths/: lagrange.cpp  rotation.cpp
smartplus-builder/src/smartplus_wrappers/Libraries/Solver/: read.cpp  solver.cpp
smartplus-builder/test/arma2numpy/: Tarma2numpy.cpp  Tarma2numpy.hpp  boostpython_arma_wrapper.cpp  test.py
(+20 files in other folders)
